--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutzmore</artifactId>
-	<version>1.r.65-SNAPSHOT</version>
+	<version>1.r.65</version>
 	<name>nutzmore</name>
 	<description>Nutz, which is a collections of lightweight frameworks, each of them can be used independently</description>
 
@@ -136,7 +136,6 @@
 		<module>nutz-plugins-qrcode</module>
 		<module>nutz-plugins-sigar</module>
 		<module>nutz-plugins-slog</module>
-		<module>nutz-plugins-spring-boot-starter</module>
 		<module>nutz-plugins-sqlmanager</module>
 		<module>nutz-plugins-sqltpl</module>
 		<module>nutz-plugins-undertow</module>
