--- a/nutz-plugins-ip2region/pom.xml
+++ b/nutz-plugins-ip2region/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.65-SNAPSHOT</version>
+    <version>1.r.65</version>
   </parent>
   <artifactId>nutz-plugins-ip2region</artifactId>
   <description>稍微改造一下原版的java代码,https://github.com/lionsoul2014/ip2region</description>
