--- a/nutz-plugins-sfntly/pom.xml
+++ b/nutz-plugins-sfntly/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.65-SNAPSHOT</version>
+    <version>1.r.65</version>
   </parent>
   <artifactId>nutz-plugins-sfntly</artifactId>
   <dependencies>
