add:ThreadIocLoader增加配置IocLoader功能，更改DaoIocLoader,使之关联ThreadIocLoader使用

--- a/nutz-plugins-iocloader/src/test/resources/comboIocLoader.properties
+++ b/nutz-plugins-iocloader/src/test/resources/comboIocLoader.properties
@@ -5,3 +5,4 @@ ioc.loader.classes=org.nutz.integration.quartz.NutQuartzCronJobFactory,org.nutz.
 #
 ioc.setup.first=
 ioc.setup.last=
+ioc.combo.loader=org.nutz.plugins.ioc.loader.dao.DaoIocLoader
