add: nutz-plugins-jetty-client 为org.nutz.http提供性能高几倍的实现

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
 		<module>nutz-plugins-zcron</module>
 		<module>nutz-plugins-zdoc</module>
 		<module>nutz-plugins-fiddler</module>
+		<module>nutz-plugins-jetty-client</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
