--- a/nutz-integration-dubbo/pom.xml
+++ b/nutz-integration-dubbo/pom.xml
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${log4j.version}</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
