--- a/nutz-integration-jedis/pom.xml
+++ b/nutz-integration-jedis/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
+			<version>${jedis.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>javax.websocket</groupId>
 			<artifactId>javax.websocket-api</artifactId>
-			<version>1.1</version>
+			<version>${javax.websocket-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
