--- a/nutz-integration-jedisque/pom.xml
+++ b/nutz-integration-jedisque/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
+			<version>${jedis.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
