--- a/nutz-plugins-cache/pom.xml
+++ b/nutz-plugins-cache/pom.xml
@@ -10,24 +10,24 @@
   	<dependency>
   		<groupId>org.nutz</groupId>
   		<artifactId>nutz-integration-jedis</artifactId>
-  		<version>1.r.66-SNAPSHOT</version>
+  		<version>${project.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sf.ehcache</groupId>
   		<artifactId>ehcache</artifactId>
-  		<version>2.10.2.2.21</version>
+  		<version>${ehcache.version}</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.shiro</groupId>
   		<artifactId>shiro-ehcache</artifactId>
-  		<version>1.3.2</version>
+  		<version>${shiro-ehcache.version}</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>redis.clients</groupId>
   		<artifactId>jedis</artifactId>
-  		<version>2.9.0</version>
+  		<version>${jedis.version}</version>
   		<scope>provided</scope>
   	</dependency>
   </dependencies>
