--- a/nutz-plugins-fiddler/pom.xml
+++ b/nutz-plugins-fiddler/pom.xml
@@ -103,12 +103,12 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.15.Final</version>
+			<version>${netty-all.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.5</version>
+			<version>${commons-lang3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
