--- a/nutz-plugins-hotplug/pom.xml
+++ b/nutz-plugins-hotplug/pom.xml
@@ -10,7 +10,7 @@
   	<dependency>
   		<groupId>com.ibeetl</groupId>
   		<artifactId>beetl</artifactId>
-  		<version>2.7.5</version>
+  		<version>${beetl.version}</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
