--- a/nutz-plugins-iocloader/pom.xml
+++ b/nutz-plugins-iocloader/pom.xml
@@ -94,13 +94,13 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.29</version>
+			<version>${druid.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.41</version>
+			<version>${mysql-connector-java.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
