--- a/nutz-plugins-profiler/pom.xml
+++ b/nutz-plugins-profiler/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.193</version>
+			<version>${h2.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
