--- a/nutz-plugins-wkcache/pom.xml
+++ b/nutz-plugins-wkcache/pom.xml
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz-integration-jedis</artifactId>
-            <version>1.r.66-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
+            <version>${jedis.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
