--- a/nutz-integration-shiro/demo/pom.xml
+++ b/nutz-integration-shiro/demo/pom.xml
@@ -38,7 +38,13 @@
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-ehcache</artifactId>
-			<version>1.4.0</version>
+			<version>1.3.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>net.sf.ehcache</groupId>
+					<artifactId>ehcache-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -64,7 +70,7 @@
 	<repositories>
 		<repository>
 			<id>nutz</id>
-			<url>https://jfrog.nutz.cn/artifactory/jcenter</url>
+			<url>https://jfrog.nutz.cn/artifactory/libs-release</url>
 		</repository>
 		<repository>
 			<id>nutz-snapshots</id>
