--- a/nutz-integration-shiro/demo/pom.xml
+++ b/nutz-integration-shiro/demo/pom.xml
@@ -47,6 +47,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.42</version>
