add: 添加XML绑定插件, xmlbind

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@
 		<module>nutz-plugins-zdoc</module>
 		<module>nutz-plugins-fiddler</module>
 		<module>nutz-plugins-jetty-client</module>
+		<module>nutz-plugins-xmlbind</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
