--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: test
     url: jdbc:mysql://127.0.0.1:3306/nutz-demo?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: 123456
+    password: G00dl^ck
     driver-class-name: com.mysql.jdbc.Driver
     filters: stat,wall,log4j
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
