--- a/nutz-plugins-zdoc/pom.xml
+++ b/nutz-plugins-zdoc/pom.xml
@@ -35,6 +35,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
