--- a/nutz-plugins-wkcache/pom.xml
+++ b/nutz-plugins-wkcache/pom.xml
@@ -35,7 +35,7 @@
             <id>wizzercn</id>
             <name>Wizzer</name>
             <email>wizzer@qq.com</email>
-            <url>http://www.wizzer.cn</url>
+            <url>https://www.wizzer.cn</url>
         </developer>
     </developers>
     <scm>
