--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 		<shiro-ehcache.version>1.3.2</shiro-ehcache.version>
 		<slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
 		<velocity.version>1.7</velocity.version>
+		<thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
+		<thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
 	</properties>
 	<licenses>
 		<license>
