--- a/nutz-plugins-multiview/pom.xml
+++ b/nutz-plugins-multiview/pom.xml
@@ -93,7 +93,15 @@
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
-			<version>1.7</version>
+			<version>${velocity.version}</version>
+			<optional>true</optional>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+			<version>2.0</version>
+			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
