--- a/nutz-plugins-ngrok/pom.xml
+++ b/nutz-plugins-ngrok/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-web</artifactId>
-			<version>1.r.68-SNAPSHOT</version>
+			<version>1.r.67</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
