--- a/nutz-integration-lettuce/pom.xml
+++ b/nutz-integration-lettuce/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.68-SNAPSHOT</version>
+		<version>1.r.68.v20190220</version>
 	</parent>
 	<artifactId>nutz-integration-lettuce</artifactId>
 
