--- a/nutz-integration-shiro/demo/pom.xml
+++ b/nutz-integration-shiro/demo/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-integration-shiro</artifactId>
-			<version>1.r.68-SNAPSHOT</version>
+			<version>1.r.68.v20190220</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
