--- a/nutz-plugins-event/pom.xml
+++ b/nutz-plugins-event/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.68-SNAPSHOT</version>
+		<version>1.r.68.v20190318</version>
 	</parent>
 	<artifactId>nutz-plugins-event</artifactId>
 	<description>Simple, lightweight and fast event bus tailored for Nutz</description>
