--- a/nutz-plugins-fiddler/pom.xml
+++ b/nutz-plugins-fiddler/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.68-SNAPSHOT</version>
+		<version>1.r.68.v20190318</version>
 	</parent>
 	<artifactId>nutz-plugins-fiddler</artifactId>
 	<url>https://nutzam.com</url>
