--- a/nutz-plugins-spring-boot-starter/demo/pom.xml
+++ b/nutz-plugins-spring-boot-starter/demo/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-spring-boot-starter</artifactId>
-			<version>1.r.68-SNAPSHOT</version>
+			<version>1.r.68.v20190318</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
