update:  所有依赖版本向上兼容

--- a/nutz-plugins-spring-boot-starter/pom.xml
+++ b/nutz-plugins-spring-boot-starter/pom.xml
@@ -46,7 +46,7 @@
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-boot.version>2.1.1.RELEASE</spring-boot.version>
+		<spring-boot.version>[2.1.1.RELEASE,)</spring-boot.version>
 	</properties>
 
 	<build>
