--- a/nutz-integration-spring/pom.xml
+++ b/nutz-integration-spring/pom.xml
@@ -45,7 +45,7 @@
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>5.1.3.RELEASE</spring.version>
+		<spring.version>[5.1.3.RELEASE,)</spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
