--- a/nutz-plugins-thrift-netty/demo/thrift-netty-demo/pom.xml
+++ b/nutz-plugins-thrift-netty/demo/thrift-netty-demo/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-thrift-netty</artifactId>
-			<version>1.r.68-SNAPSHOT</version>
+			<version>1.r.68.v20190516</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
