--- a/nutz-plugins-wkcache/pom.xml
+++ b/nutz-plugins-wkcache/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>nutzmore</artifactId>
         <groupId>org.nutz</groupId>
-        <version>1.r.68-SNAPSHOT</version>
+        <version>1.r.68.v20190516</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
