--- a/nutz-plugins-apidoc/demo/pom.xml
+++ b/nutz-plugins-apidoc/demo/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-apidoc</artifactId>
-			<version>1.r.68.v20190516</version>
+			<version>1.r.68-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
