--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: false
 language: java
 script: mvn -Dmaven.test.skip=true clean package
+dist: trusty
 jdk:
-  - oraclejdk11
+  - oraclejdk8
 # whitelist
 branches:
   only:
