--- a/nutz-plugins-spring-boot-starter/demo/pom.xml
+++ b/nutz-plugins-spring-boot-starter/demo/pom.xml
@@ -7,7 +7,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.13.RELEASE</version>
+		<version>2.1.6.RELEASE</version>
+		<relativePath />
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,19 +45,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.0.27</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
@@ -64,19 +66,14 @@
 			<version>1.r.68-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>club.zhcs</groupId>
-			<artifactId>axe-swagger</artifactId>
-			<version>1.5</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>[1.1.14,)</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
-			<artifactId>axe-captcha</artifactId>
-			<version>1.5</version>
-		</dependency>
-		<dependency>
-			<groupId>club.zhcs</groupId>
-			<artifactId>axe-common</artifactId>
-			<version>1.5</version>
+			<artifactId>axe-chinare-crm</artifactId>
+			<version>[2.1.6.RELEASE,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
