--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -1,48 +1,93 @@
-spring:
-  datasource:
-    name: test
-    url: jdbc:mysql://127.0.0.1:3306/nutz-demo?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: root
-    password: G00dl^ck
-    driver-class-name: com.mysql.jdbc.Driver
-    filters: stat,wall,log4j
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
+server:
+  port: 0
+management:
+  info:
+    git:
+      mode: full
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include:
+          - '*'
 swagger:
   base-package: demo
+  title: spring-boot-nutz-starter-demo
+  description: spring-boot-nutz-starter-demo swagger 接口手册示例
+  authorization:
+    key-name: Authorization
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+  application:
+    name: spring-boot-nutz-starter-demo
+  datasource:
+    druid:
+      url:  jdbc:h2:file:~/.data/nutz-demo;MODE=MYSQL;DATABASE_TO_UPPER=false
+      username: root
+      password: G00dl^ck
+      driver-class-name: org.h2.Driver
+      filters: stat,wall,log4j2
+      initial-size: 10
+      min-idle:  1
+      max-active:  50
+      max-wait:  60000
+      time-between-eviction-runs-millis:  60000
+      min-evictable-idle-time-millis:  300000
+      validation-query:  SELECT 'china'
+      test-while-idle:  true
+      test-on-borrow:  true
+      test-on-return:  false
+      pool-prepared-statements:  true
+      max-pool-prepared-statement-per-connection-size: 20
+      web-stat-filter:
+        enabled: true
+        url-pattern: /*
+        exclusions: /druid/*,*.js,*.gif,*.jpg,*.png,*.css,*.ico
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+        reset-enable: true
+  config:
+    location: null
 logging:
+  file: ${user.home}/log/${spring.application.name}.log
   level:
-    root: info
     org.nutz: debug
+    com.chinare: debug
     demo: debug
-management:
-  security:
-    enabled: false
+    springfox: off
+    io.swagger: off
 nutz:
-  json:
-    enabled: true
-    mode: compact
-    date-format: yyyyMMdd HH:mm:ss
   dao:
     runtime:
       add-column: true
+      basepackage:
+        - demo.bean
+#        - BOOT-INF.classes.demo.bean # 生成环境如果需要的话需要加上BOOT-INF.classes.
       check-index: true
+      create: true
       delete-column: true
       foce-create: false
-      create: true
       migration: true
-      basepackage: demo
     sqlmanager:
       paths:
-      - sqls
+        - sqls
+  json:
+    enabled: true
+    mode: full
+auth:
+  without-authentication-url-regulars:
+    - /user/login
+    - /app/trader/register
+    - /app/trader/bang/mobile
+    - /app/broker/login
+    - /app/user/user/login
+    - /app/tech/user/login
+    - /app/pay/callback
+    - /app/farmer/user/login
+    - /app/tech/user/login
