--- a/nutz-plugins-spring-boot-starter/demo/pom.xml
+++ b/nutz-plugins-spring-boot-starter/demo/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath />
 	</parent>
 	<properties>
@@ -78,6 +78,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>3.0.15.RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
