--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,7 @@
 		<module>nutz-plugins-xmlbind</module>
 		<module>nutz-integration-lettuce</module>
 		<module>nutz-integration-redisson</module>
+		<module>nutz-plugins-postgis</module>
 	</modules>
 	<distributionManagement>
 		<snapshotRepository>
