--- a/nutz-plugins-postgis/pom.xml
+++ b/nutz-plugins-postgis/pom.xml
@@ -16,6 +16,18 @@
 			<artifactId>postgis-jdbc-jtsparser</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 	<plugins>
