update: dubbo -> 2.6.9 & fix: cxf

--- a/nutz-integration-cxf/pom.xml
+++ b/nutz-integration-cxf/pom.xml
@@ -91,6 +91,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>javax.jws-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
